k3s_cluster/base/default/harbor/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset
  namespace: default
spec:
  selector:
    matchLabels:
      app: main-harbor
  template:
    metadata:
      labels:
        app: main-harbor
    spec:
      serviceAccountName: serviceaccount
      nodeSelector:
        kubernetes.io/arch: amd64

      containers:
        - name: fluentd
          image: fluent/fluentd-kubernetes-daemonset:v1-debian-syslog
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: config
              mountPath: /fluentd/etc/fluent.conf
              subPath: fluent.conf
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: config
          configMap:
            name: fluentd-config
