k3s_cluster/base/default/harbor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  labels:
    app: main-harbor
spec:
  type: ClusterIP
  selector:
    app: main-harbor
  ports:
    - name: core
      protocol: TCP
      port: 2290 # core API — /api, /service, /v2, /c
      targetPort: 8080
    - name: coresecure
      protocol: TCP
      port: 2291
      targetPort: 8443
    - name: web
      protocol: TCP
      port: 2293 # web console — everything else ("/")
      targetPort: 8090
    - name: syslog
      protocol: TCP
      port: 2292
      targetPort: 1514
